actualizacion de los turnos